--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,13 @@
-[package]
-name = "teleport"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+  "teleport-api",
+  "teleport-client"
+]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[patch.crates-io]
+# hyper-rustls = { path = "../hyper-rustls" }
 
-[dependencies]
-tonic = "0.8.3"
-prost = "0.11"
-prost-types = "0.11"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
-
-[build-dependencies]
-tonic-build = "0.8.4"
+[profile.release]
+lto = "fat"
+codegen-units = 1
+strip = "debuginfo"
